--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nuxtjs/pwa": "^3.0.2",
     "@nuxtjs/style-resources": "^1.0.0",
     "core-js": "^3.6.5",
+    "dayjs": "^1.9.7",
     "nuxt": "^2.14.6",
     "reset.css": "^2.0.2",
     "vant": "^2.11.1"
